# uv-workspace-template

./: README.md  pyproject.toml
