[project]
name = "uv-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]


[tool.uv.sources]
lib = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
